--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 
 # src/main/resources/application.yml
 server:
-  port:8080
+  port: 8080
+
 spring:
   application:
     name:Account
   datasource:
-    url: jdbc:h2:mem:accountdb;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:accountdb;
     driver-class-name: org.h2.Driver
     username: sa
     password: password
