--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,8 @@ variables:
   dockerfilePath: '$(Build.SourcesDirectory)/account/Dockerfile'
   tag: '$(Build.BuildId)'
 
-pool:
-  name: 'azureagent'
+  # Agent VM image name
+  vmImageName: 'ubuntu-latest'
 
 stages:
 - stage: Build
