--- a/account/Dockerfile
+++ b/account/Dockerfile
@@ -2,7 +2,7 @@
 FROM openjdk:17-jdk-slim
 
 # Copy the JAR file (built by Maven or Gradle) into the container
-COPY target/*.jar account-service.jar
+COPY ./target/*.jar account-service.jar
 
 # Expose the port that the service runs on
 EXPOSE 8080
