transaction docker file updated

--- a/transaction/Dockerfile
+++ b/transaction/Dockerfile
@@ -4,8 +4,13 @@ FROM maven:3.8.5-openjdk-17
 # Set the working directory inside the container
 WORKDIR /transactionapp
 
-# Copy the Maven project files into the container
-COPY . .
+# Copy only the pom.xml first and download dependencies to cache them
+COPY pom.xml .
+
+RUN mvn dependency:go-offline -B
+
+# Copy the source code
+COPY src ./src
 
 # Package the application (will create target/*.jar)
 RUN mvn clean package -DskipTests
@@ -14,4 +19,4 @@ RUN mvn clean package -DskipTests
 EXPOSE 8082
 
 # Run the application
-ENTRYPOINT ["sh", "-c", "java -jar target/*.jar"]
+ENTRYPOINT ["java", "-jar", "target/*.jar"]
