--- a/azure-pipelines-account.yml
+++ b/azure-pipelines-account.yml
@@ -16,7 +16,7 @@ variables:
   dockerRegistryServiceConnection: '8641de33-eb53-4ed9-89ee-1961181bdd82'
   imageRepository: 'account'
   containerRegistry: 'openaccountacr.azurecr.io'
-  dockerfilePath: '**/Dockerfile'
+  dockerfilePath: '$(Build.SourcesDirectory)/account/Dockerfile'
   tag: '$(Build.BuildId)'
 
   # Agent VM image name
